--- a/main/coverage-report/index.html
+++ b/main/coverage-report/index.html
@@ -106,8 +106,8 @@ table.table-condensed {
       </ul>
       <div class="tab-content" data-tabsetid="covr">
         <div class="tab-pane active" title="Files" data-value="Files" id="tab-covr-1">
-          <div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-9a79c629323d9482afcf" style="width:100%;height:500px;"></div>
-          <script type="application/json" data-for="htmlwidget-9a79c629323d9482afcf">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/get_ref.R<\/a>","<a href=\"#\">R/deps_installation_proposal.R<\/a>","<a href=\"#\">R/check.R<\/a>"],[268,233,205],[98,81,61],[0,0,0],[98,81,61],["0","0","0"],["0.00%","0.00%","0.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
+          <div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-b60c8f5fbc0366a80efe" style="width:100%;height:500px;"></div>
+          <script type="application/json" data-for="htmlwidget-b60c8f5fbc0366a80efe">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/get_ref.R<\/a>","<a href=\"#\">R/deps_installation_proposal.R<\/a>","<a href=\"#\">R/check.R<\/a>"],[268,233,205],[98,81,61],[0,0,0],[98,81,61],["0","0","0"],["0.00%","0.00%","0.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
         </div>
         <div class="tab-pane" title="Source" data-value="Source" id="tab-covr-2">
           <div id="files">
@@ -4960,14 +4960,14 @@ table.table-condensed {
                     <td class="num">218</td>
                     <td class="coverage">!</td>
                     <td class="col-sm-12">
-                      <pre class="language-r">      "{pb_spin} Resolving {cli::pb_extra$type} version {cli::pb_extra$package}",</pre>
+                      <pre class="language-r">      "{cli::pb_spin} Resolving {cli::pb_extra$type} version {cli::pb_extra$package}",</pre>
                     </td>
                   </tr>
                   <tr class="missed">
                     <td class="num">219</td>
                     <td class="coverage">!</td>
                     <td class="col-sm-12">
-                      <pre class="language-r">      "[{pb_current}/{pb_total}]   ETA:{pb_eta}"</pre>
+                      <pre class="language-r">      "[{cli::pb_current}/{cli::pb_total}]   ETA:{cli::pb_eta}"</pre>
                     </td>
                   </tr>
                   <tr class="never">
@@ -4988,7 +4988,7 @@ table.table-condensed {
                     <td class="num">222</td>
                     <td class="coverage">!</td>
                     <td class="col-sm-12">
-                      <pre class="language-r">      "{col_green(symbol$tick)} Resolved {pb_total} packages in {pb_elapsed}."</pre>
+                      <pre class="language-r">      "{cli::col_green(cli::symbol$tick)} Resolved {cli::pb_total} packages in {cli::pb_elapsed}."</pre>
                     </td>
                   </tr>
                   <tr class="never">
