--- a/main/coverage-report/index.html
+++ b/main/coverage-report/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="utf-8"/>
 <style>body{background-color:white;}</style>
-<script src="lib/htmlwidgets-1.6.2/htmlwidgets.js"></script>
+<script src="lib/htmlwidgets-1.6.4/htmlwidgets.js"></script>
 <link href="lib/datatables-css-0.0.0/datatables-crosstalk.css" rel="stylesheet" />
-<script src="lib/datatables-binding-0.28/datatables.js"></script>
+<script src="lib/datatables-binding-0.31/datatables.js"></script>
 <script src="lib/jquery-3.6.0/jquery-3.6.0.min.js"></script>
-<link href="lib/dt-core-1.13.4/css/jquery.dataTables.min.css" rel="stylesheet" />
-<link href="lib/dt-core-1.13.4/css/jquery.dataTables.extra.css" rel="stylesheet" />
-<script src="lib/dt-core-1.13.4/js/jquery.dataTables.min.js"></script>
-<link href="lib/crosstalk-1.2.0/css/crosstalk.min.css" rel="stylesheet" />
-<script src="lib/crosstalk-1.2.0/js/crosstalk.min.js"></script>
+<link href="lib/dt-core-1.13.6/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="lib/dt-core-1.13.6/css/jquery.dataTables.extra.css" rel="stylesheet" />
+<script src="lib/dt-core-1.13.6/js/jquery.dataTables.min.js"></script>
+<link href="lib/crosstalk-1.2.1/css/crosstalk.min.css" rel="stylesheet" />
+<script src="lib/crosstalk-1.2.1/js/crosstalk.min.js"></script>
 <link href="lib/highlight.js-6.2/rstudio.css" rel="stylesheet" />
 <script src="lib/highlight.js-6.2/highlight.pack.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -106,8 +106,8 @@ table.table-condensed {
       </ul>
       <div class="tab-content" data-tabsetid="covr">
         <div class="tab-pane active" title="Files" data-value="Files" id="tab-covr-1">
-          <div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-47f98a3fcdb7a4b63fdd" style="width:100%;height:500px;"></div>
-          <script type="application/json" data-for="htmlwidget-47f98a3fcdb7a4b63fdd">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/deps_installation_proposal.R<\/a>","<a href=\"#\">R/solve.R<\/a>","<a href=\"#\">R/check.R<\/a>","<a href=\"#\">R/get_ref.R<\/a>","<a href=\"#\">R/utils.R<\/a>","<a href=\"#\">R/desc_utils.R<\/a>"],[268,166,171,455,180,210],[111,69,32,177,60,65],[0,0,0,1,15,27],[111,69,32,176,45,38],["0","0","0","0","2","8"],["0.00%","0.00%","0.00%","0.56%","25.00%","41.54%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
+          <div class="datatables html-widget html-fill-item" id="htmlwidget-7100929427e8615da245" style="width:100%;height:500px;"></div>
+          <script type="application/json" data-for="htmlwidget-7100929427e8615da245">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/deps_installation_proposal.R<\/a>","<a href=\"#\">R/solve.R<\/a>","<a href=\"#\">R/check.R<\/a>","<a href=\"#\">R/get_ref.R<\/a>","<a href=\"#\">R/utils.R<\/a>","<a href=\"#\">R/desc_utils.R<\/a>"],[268,166,171,455,180,210],[111,69,32,177,60,65],[0,0,0,1,15,27],[111,69,32,176,45,38],["0","0","0","0","2","8"],["0.00%","0.00%","0.00%","0.56%","25.00%","41.54%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
         </div>
         <div class="tab-pane" title="Source" data-value="Source" id="tab-covr-2">
           <div id="files">
@@ -6576,7 +6576,7 @@ table.table-condensed {
                     <td class="num">32</td>
                     <td class="coverage">1<em>x</em></td>
                     <td class="col-sm-12">
-                      <pre class="language-r">  if (is.na(date) || is.infinite.POSIXlt(date)) {</pre>
+                      <pre class="language-r">  if (is.na(date) || is.infinite(date)) {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
